tests/snapshots/bundle/bundle__bundle_dynamic_zh.snap
---
source: tests/bundle.rs
expression: "normalize(combined, &dir)"
---
// === bun ===
//#region virtual:i18n/bun
const suggestion_file = "文件";
const suggestion_global_installed = "全局已安装";
const suggestion_installed = "已安装";
const suggestion_package_bin = "包可执行文件";
const suggestion_package_from_registry = "来自注册表的包";
const suggestion_script = "脚本";
//#endregion
//#region sugg
const readJson = async (path) => {
	const content = await globalThis.__readFile(path);
	if (!content) return {};
	try {
		return JSON.parse(content);
	} catch {
		return {};
	}
};
const exec = globalThis.__exec;
globalThis.__execFile;
const scanPath = globalThis.__scanPath;
globalThis.__readFile;
globalThis.__ui;
//#endregion
//#region tests/fixtures/completions/bun/__v_dyn_bun.ts
async function getCompletes(type) {
	try {
		const out = await exec(`bun getcompletes ${type}`);
		if (type === "z") return out.trim().split("\n").filter((line) => line.includes("	")).map((line) => line.split("	")[0]);
		else return out.trim().split(/\s+/).filter(Boolean);
	} catch {
		return [];
	}
}
async function getScriptNames() {
	return (await getCompletes("z")).map((s) => ({
		display: s,
		description: suggestion_script
	}));
}
async function getBinNames() {
	return (await getCompletes("b")).map((b) => ({
		display: b,
		description: suggestion_package_bin
	}));
}
async function getScriptFiles(ctx) {
	return (await scanPath(ctx.prefix)).filter((f) => /\.(ts|js|tsx|jsx|mjs|cjs)$/i.test(f.display) || f.isDir);
}
async function getTestFiles(ctx) {
	return (await scanPath(ctx.prefix)).filter((f) => /\.(test|spec)\.(ts|js|tsx|jsx)$/i.test(f.display) || ctx.prefix !== "" && f.isDir);
}
async function getInstalledPackages() {
	const pkg = await readJson("package.json");
	const deps = {
		...pkg.dependencies,
		...pkg.devDependencies
	};
	return Object.keys(deps).map((name) => ({
		display: name,
		description: suggestion_installed
	}));
}
async function getGlobalPackages() {
	try {
		return (await exec("bun pm ls -g")).trim().split("\n").slice(1).map((line) => line.replace(/^[├└][─ ]{2,}\s+/, "").trim()).filter(Boolean).map((name) => name.replace(/@[^@]+$/, "")).filter((name) => name.length > 0).map((name) => ({
			display: name,
			description: suggestion_global_installed
		}));
	} catch {
		return [];
	}
}
async function getAddPackages(ctx) {
	try {
		return (await exec(`bun getcompletes a ${ctx.prefix}`)).trim().split(/\s+/).filter(Boolean).map((name) => ({
			display: name,
			description: suggestion_package_from_registry
		}));
	} catch {
		return [];
	}
}
const __dyn_pmSubCommands_why_args = async () => getInstalledPackages();
const __dyn_pmSubCommands_pkg_args = async (ctx) => {
	return [
		"get",
		"set",
		"delete",
		"fix"
	].filter((c) => c.startsWith(ctx.prefix));
};
const __dyn_pmSubCommands_trust_args = async () => getInstalledPackages();
const __dyn_bunCommands_run_args = async (ctx) => {
	let [scripts, bins, files] = await Promise.all([
		getScriptNames(),
		getBinNames(),
		getScriptFiles(ctx)
	]);
	if (ctx.prefix) {
		scripts = scripts.filter((s) => s.display.startsWith(ctx.prefix));
		bins = bins.filter((b) => b.display.startsWith(ctx.prefix));
	}
	if (scripts.length + bins.length > 0) {
		if (ctx.prefix === "") files = files.filter((f) => !f.isDir);
		files = files.map((f) => ({
			...f,
			description: suggestion_file
		}));
	}
	return [
		...scripts,
		...files,
		...bins
	];
};
const __dyn_bunCommands_test_args = async (ctx) => getTestFiles(ctx);
const __dyn_bunCommands_install_args = async (ctx) => getAddPackages(ctx);
const __dyn_bunCommands_add_args = async (ctx) => getAddPackages(ctx);
const __dyn_bunCommands_remove_args = async (ctx) => {
	if (ctx.options["-g"] === true || ctx.options["--global"] === true) return getGlobalPackages();
	return getInstalledPackages();
};
const __dyn_bunCommands_update_args = async () => getInstalledPackages();
const __dyn_bunCommands_why_args = async () => getInstalledPackages();
const __dyn_bunCommands_build_args = async (ctx) => getScriptFiles(ctx);
//#endregion
export { __dyn_bunCommands_add_args, __dyn_bunCommands_build_args, __dyn_bunCommands_install_args, __dyn_bunCommands_remove_args, __dyn_bunCommands_run_args, __dyn_bunCommands_test_args, __dyn_bunCommands_update_args, __dyn_bunCommands_why_args, __dyn_pmSubCommands_pkg_args, __dyn_pmSubCommands_trust_args, __dyn_pmSubCommands_why_args };

// === docker ===
//#region virtual:i18n/docker
const container_desc = "运行中的容器";
//#endregion
//#region sugg
const exec = globalThis.__exec;
globalThis.__execFile;
globalThis.__scanPath;
globalThis.__readFile;
globalThis.__ui;
//#endregion
//#region tests/fixtures/completions/docker/__v_dyn_docker.ts
const __dyn_docker_ps_args = async () => {
	return (await exec("docker ps --format '{{.Names}}'")).split("\n").filter(Boolean).map((name) => ({
		display: name,
		description: container_desc
	}));
};
//#endregion
export { __dyn_docker_ps_args };

// === greet_dynamic ===
//#region virtual:i18n/greet_dynamic
const bye_desc = "再见描述";
const hello_desc = "你好描述";
//#endregion
//#region tests/fixtures/completions/__v_dyn_greet_dynamic.ts
const __dyn_greet_dynamic_args = () => [{
	display: "hello",
	description: hello_desc
}, {
	display: "bye",
	description: bye_desc
}];
//#endregion
export { __dyn_greet_dynamic_args };

// === pnpm ===
//#region tests/fixtures/completions/_lib.ts
const a = "外部引入的变量";
//#endregion
//#region sugg
const readJson = async (path) => {
	const content = await globalThis.__readFile(path);
	if (!content) return {};
	try {
		return JSON.parse(content);
	} catch {
		return {};
	}
};
globalThis.__exec;
globalThis.__execFile;
globalThis.__scanPath;
globalThis.__readFile;
globalThis.__ui;
//#endregion
//#region tests/fixtures/completions/__v_dyn_pnpm.ts
const __dyn_pnpm_run_args = async () => {
	const scripts = (await readJson("package.json")).scripts || {};
	return Object.entries(scripts).map(([name, cmd]) => ({
		display: name,
		description: `运行指令 ${a}: ${cmd}`
	}));
};
//#endregion
export { __dyn_pnpm_run_args };

// === testkit ===
globalThis.__exec;
globalThis.__execFile;
globalThis.__scanPath;
globalThis.__readFile;
const ui = globalThis.__ui;
//#endregion
//#region tests/fixtures/completions/__v_dyn_testkit.ts
const __dyn_sharedDynamic = async () => {
	return [
		"shared-a",
		"shared-b",
		"shared-c"
	];
};
const __dyn_testkit_opts_options_d_args = async () => {
	return [
		"item1",
		"item2",
		"item3"
	];
};
const __dyn_testkit_optsinfo_args = async (ctx) => {
	const lines = [];
	const opts = ctx.options;
	if (opts["-g"]) lines.push("global:true");
	if (opts["--config"]) lines.push(`config:${opts["--config"].join(",")}`);
	if (opts["--cwd"]) lines.push(`cwd:${opts["--cwd"].join(",")}`);
	if (opts["--exclude"]) lines.push(`exclude:${opts["--exclude"].join(",")}`);
	if (lines.length === 0) lines.push("(no options)");
	return lines.map((s) => ({
		display: s,
		value: s
	}));
};
const __dyn_testkit_hybrid_args = async () => {
	return [
		"file1.txt",
		"file2.txt",
		"file3.txt"
	];
};
const __dyn_testkit_logdemo_args = async (ctx) => {
	const prefix = ctx.prefix ?? "";
	if (prefix.startsWith("bad-")) throw new Error(`❌ Invalid prefix detected: "${prefix}" — please remove the leading "bad-"`);
	else {
		ui.log("[DEBUG] prefix=", prefix);
		ui.log("[INFO] configuration loaded successfully");
	}
	return [
		{
			display: "alpha",
			value: "alpha",
			description: "First item"
		},
		{
			display: "beta",
			value: "beta",
			description: "Second item"
		},
		{
			display: "gamma",
			value: "gamma",
			description: "Third item"
		}
	];
};
//#endregion
export { __dyn_sharedDynamic, __dyn_testkit_hybrid_args, __dyn_testkit_logdemo_args, __dyn_testkit_opts_options_d_args, __dyn_testkit_optsinfo_args };
